--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,34 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 :root {
-  --foreground-rgb: 0, 0, 0;
-
+  --bg: #0d0c22;
+  --bgSoft: #2d2b42;
+  --text: white;
+  --textSoft: #e5e5e5;
+  --btn: #3673fd;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  padding: 1rem;
+  background-color: var(--bg);
+  color: var(--text);
 }
 
-/* @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-} */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  width: 87%;
+  margin: auto;
+  padding-left: 50px;
+  padding-right: 50px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
