--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,6 +1,7 @@
 .container {
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 100px;
 }
