--- a/src/components/editForm/editForm.module.css
+++ b/src/components/editForm/editForm.module.css
@@ -1,7 +1,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .form input {
@@ -11,6 +11,7 @@
   outline: none;
   background-color: var(--bgSoft);
   color: var(--text);
+  margin-bottom: 10px;
 }
 
 .form button {
