--- a/src/app/(auth)/login/login.module.css
+++ b/src/app/(auth)/login/login.module.css
@@ -1,31 +1,27 @@
-.form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .form input {
-    padding: 20px;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    background-color: var(--bgSoft);
-    color: var(--text);
-    margin-bottom: 10px;
-  }
-  
-  .form button {
-    padding: 20px;
-    background-color: var(--btn);
-    color: var(--text);
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  @media (max-width: 768px) {
-    .container {
-      flex-direction: column;
-    }
-  }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper {
+  width: 500px;
+  background-color: var(--bgSoft);
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 30px;
+  border-radius: 5px;
+}
+
+.github {
+  width: 100%;
+  padding: 20px;
+  cursor: pointer;
+  background-color: #fff;
+  color: #000;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+}
