--- a/src/components/adminUsers/adminUsers.module.css
+++ b/src/components/adminUsers/adminUsers.module.css
@@ -12,21 +12,12 @@
   gap: 20px;
 }
 
-.userButton {
-  padding: 5px 10px;
-  background-color: rgba(220, 20, 60, 0.593);
-  color: var(--textColor);
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-}
-
 .active {
   color: red;
 }
 
 .deleteBtn {
-  padding: 10px 20px;
+  padding: 5px 10px;
   /* background-color: var(--btn); */
   background-color: #ed4337;
   color: var(--text);
@@ -34,4 +25,5 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 10px;
 }
