--- a/src/components/adminEditForm/adminEditForm.module.css
+++ b/src/components/adminEditForm/adminEditForm.module.css
@@ -31,7 +31,7 @@
 }
 
 .editBtn {
-  padding: 10px 20px;
+  padding: 5px 10px;
   background-color: var(--btn);
   color: var(--text);
   font-weight: bold;
@@ -39,4 +39,5 @@
   border-radius: 5px;
   cursor: pointer;
   margin-right: 10px;
+  font-size: 10px;
 }
