--- a/src/components/adminUsers/adminUsers.module.css
+++ b/src/components/adminUsers/adminUsers.module.css
@@ -27,3 +27,10 @@
   cursor: pointer;
   font-size: 10px;
 }
+
+.load {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
