--- a/src/components/adminEditForm/adminEditForm.module.css
+++ b/src/components/adminEditForm/adminEditForm.module.css
@@ -33,7 +33,7 @@
 .editBtn {
   padding: 5px 10px;
   background-color: var(--btn);
-  color: var(--text);
+  color: var(--editDeleteBtn);
   font-weight: bold;
   border: none;
   border-radius: 5px;
