--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -10,6 +10,7 @@
   font-weight: bold;
   color: white;
   background-color: black;
+  border: none;
 }
 
 .logoutDark {
@@ -17,7 +18,8 @@
   cursor: pointer;
   font-weight: bold;
   color: rgb(11, 11, 11);
-  background-color: rgba(255, 255, 255, 0.699);
+  background-color: var(--text);
+  border: none;
 }
 
 .mobileLinks,
@@ -48,4 +50,10 @@
     justify-content: center;
     gap: 10px;
   }
+}
+
+.themeBtn {
+  position: absolute!important;
+  right: 10px;
+  top: 10px;
 }
