--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 :root {
   --bg: #e9e6e6;
+  --bgNavMenu: #ffffff;
   --bgSoft: #c9c9cd;
   --text: rgb(4, 4, 4);
   --textSoft: #5a5a5a;
@@ -13,6 +14,7 @@
 
 :root.dark {
   --bg: #0d0c22;
+  --bgNavMenu: #1e1979;
   --bgSoft: #2d2b42;
   --text: white;
   --textSoft: #e5e5e5;
