--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -42,8 +42,8 @@
     right: 0;
     width: 50%;
     height: calc(100vh - 100px);
-    /* background-color: var(--bg); */
-    background-color: rebeccapurple;
+    background-color: var(--bgNavMenu);
+    /* background-color: rebeccapurple; */
     display: flex;
     flex-direction: column;
     align-items: center;
