--- a/src/components/chatSocket/chatSocket.module.css
+++ b/src/components/chatSocket/chatSocket.module.css
@@ -27,6 +27,9 @@
   .container {
     flex-direction: column;
   }
+  .chatList {
+    border-right: none !important;
+  }
 }
 
 .container {
@@ -53,6 +56,7 @@
 .messageContainer {
   padding: 10px;
   background-color: var(--bgSoft);
+  border-radius: 15px;
 }
 
 .userHolder {
@@ -87,11 +91,15 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  position: relative;
 }
 
 .offline {
-  width: 10px;
-  height: 10px;
+  width: 13px;
+  height: 13px;
   background-color: gray;
   border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  left: -7px;
 }
