--- a/src/components/adminPostForm/adminPostForm.module.css
+++ b/src/components/adminPostForm/adminPostForm.module.css
@@ -9,7 +9,7 @@
   border-radius: 5px;
   border: none;
   outline: none;
-  background-color: var(--bgSoft);
+  background-color: var(--inputBg);
   color: var(--text);
 }
 
