--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -30,7 +30,7 @@
   border-radius: 5px;
   border: none;
   outline: none;
-  background-color: var(--bgSoft);
+  background-color: var(--inputBg);
   color: var(--text);
 }
 
