--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --textSoft: #5a5a5a;
   --btn: #3673fd;
   --editDeleteBtn: #fff;
+  --inputBg:#fff
 }
 
 :root.dark {
@@ -20,6 +21,7 @@
   --textSoft: #e5e5e5;
   --btn: #3673fd;
   --editDeleteBtn: #fff;
+  --inputBg:#4b4b4d
 }
 
 * {
