--- a/src/components/loginForm/loginForm.module.css
+++ b/src/components/loginForm/loginForm.module.css
@@ -9,7 +9,7 @@
   border-radius: 5px;
   border: none;
   outline: none;
-  background-color: #4c4a5c;
+  background-color: var(--inputBg);
   color: var(--text);
   margin-bottom: 10px;
 }
