--- a/src/components/chatSocket/chatSocket.module.css
+++ b/src/components/chatSocket/chatSocket.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: relative;
 }
 
 .form input {
@@ -13,14 +14,26 @@
   color: var(--text);
 }
 
+.form input::placeholder {
+  color: black;
+  opacity: 1; /* Firefox */
+}
+
 .form button {
-  padding: 20px;
+  /* padding: 20px;
   background-color: var(--btn);
   color: var(--text);
   font-weight: bold;
   border: none;
   border-radius: 5px;
+  cursor: pointer; */
+  all: unset;
+  position: absolute;
+  right: 20px;
+  z-index: 9999;
   cursor: pointer;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 
 @media (max-width: 768px) {
@@ -53,11 +66,19 @@
   gap: 20px;
 }
 
+.scrollableContainer {
+  /* overflow: scroll; */
+  overflow-y: auto;
+  height: 100px;
+}
+
 .messageContainer {
   padding: 10px;
   background-color: var(--bgSoft);
   border-radius: 15px;
   display: inline-block;
+  margin-bottom: 15px;
+  vertical-align: super;
 }
 
 .messageContainerSelf {
@@ -66,6 +87,7 @@
   border-radius: 15px;
   display: inline-block;
   text-align: right;
+  margin: 7px;
 }
 
 .imageContainer {
