is typing socket

--- a/src/components/chatSocket/chatSocket.module.css
+++ b/src/components/chatSocket/chatSocket.module.css
@@ -69,7 +69,12 @@
 .scrollableContainer {
   /* overflow: scroll; */
   overflow-y: auto;
-  height: 300px;
+  height: 200px;
+}
+
+.isTyping {
+  position: absolute;
+  top: -30px;
 }
 
 .messageContainer {
