--- a/src/components/chatSocket/chatSocket.module.css
+++ b/src/components/chatSocket/chatSocket.module.css
@@ -7,15 +7,16 @@
 
 .form input {
   padding: 20px;
+  padding-right: 60px;
   border-radius: 5px;
   border: none;
   outline: none;
-  background-color: var(--inputBg);
+  background-color: var(--chatBg);
   color: var(--text);
 }
 
 .form input::placeholder {
-  color: rgb(85, 84, 84);
+  color: rgb(0, 0, 0);
   opacity: 1; /* Firefox */
 }
 
@@ -29,7 +30,7 @@
   transform: translate(0, -50%);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .container {
     flex-direction: column;
   }
@@ -50,6 +51,7 @@
   width: 100px;
   gap: 20px;
   border-right: 2px solid var(--bgSoft);
+  position: relative;
 }
 
 .chatContainer {
@@ -57,16 +59,39 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: relative;
+}
+
+.messageTitle {
+  position: absolute;
+  top: -50px;
+  left: 0;
+}
+
+.listTitle {
+  position: absolute;
+  top: -50px;
+  left: 0;
+}
+
+@media (max-width: 992px) {
+  .messageTitle {
+    top: -30px;
+  }
 }
 
 .scrollableContainer {
   /* overflow: scroll; */
   overflow-y: auto;
-  height: 200px;
+  height: 300px;
+  padding: 20px;
+  background: var(--chatBg);
+  border-radius: 10px;
 }
 
 .isTyping {
   position: absolute;
+  opacity: 0.7;
   top: -30px;
 }
 
