--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -27,7 +27,7 @@
   display: none;
 }
 
-@media (max-width: 786px) {
+@media (max-width: 992px) {
   .links {
     display: none;
   }
@@ -49,11 +49,18 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    z-index: 999;
   }
 }
 
 .themeBtn {
-  position: absolute!important;
+  position: absolute !important;
   right: 10px;
-  top: 10px;
+  top: 30px;
+}
+
+.username {
+  position: absolute;
+  top: 5px;
+  right: 10px;
 }
