--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,11 @@ body {
   color: var(--text);
 }
 
+input::placeholder {
+  color: rgb(0, 0, 0);
+  opacity: 1; /* Firefox */
+}
+
 a {
   text-decoration: none;
   color: inherit;
